--- a/fonts_colours_challenge.html
+++ b/fonts_colours_challenge.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8" />
     <title>HeadingsAndParagraghs/Chad Bosch</title>
     <style>
+        /* Body styling */
     body {
         background-color: firebrick;
         text-align: center;
         margin-left: 440px;
         margin-right: 440px;
     }
+    /* styled headings 2 to 4 */
      h2, h3, h4 {
          color: rgb(161, 160, 160);
      }
-
+    /* The p font style is changed to look different from the rest of the body */
      p {
          font-family: Arial, Helvetica, sans-serif;
      }
@@ -23,6 +25,7 @@
 
 <body>
     <!-- Text from the Jungle Book -->
+    <!-- CSS Challenge -->
     <!-- h1 Most important header -->
     <h1>Maxims of Baloo</h1>
     <h2>All that is</h2>
