--- a/Challenge 3/box.html
+++ b/Challenge 3/box.html
@@ -10,7 +10,7 @@
     <article>
       <h1>Cbazil<br>Chad Bosch</h1>
       <img style="-webkit-user-select: none; cursor: zoom-in;"
-      src="https://i.imgur.com/4dxx0Ml.png";>
+      src="https://i.imgur.com/4dxx0Ml.png"; width: "1350px" height: "100px;">
       </article>
     </header>
 
