--- a/2.Challenge 2/css_challenge2.html
+++ b/2.Challenge 2/css_challenge2.html
@@ -60,7 +60,7 @@
   </aside>
 
   <nav>
-
+	<!-- Navigation bar -->
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Finding us</a></li>
